# arch

./: README.md  __init__.py  pyproject.toml
.github/workflows/: python-publish.yml
arch/logging_configs/: 5-queued-stderr-json-file.json
logging/logging_configs/: 0-stdout.json  3-filtered-stdout-stderr.json  5-queued-stderr-json-file.json
streamarch/: loggers.py  logging.py  logs.py
streamarch/logging_configs/: 1-stderr-file.json  2-stderr-json-file.json  4-queued-json-stderr.json  5-queued-stderr-json-file.json
